fixed 0.X, 0-X, overflow issues

--- a/style.css
+++ b/style.css
@@ -21,3 +21,6 @@ button.btn {
 #blank, #zero {
   width: 134px;
 }
+#memory, #display {
+  overflow: auto;
+}
